# idp-platform

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  fix-ecs-healthcheck.sh  pyproject.toml  trust-policy.json
.github/workflows/: deploy.yml  terraform.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: health.py  provision.py
app/core/: config.py  exceptions.py  logging.py
app/models/: provision.py
app/services/: provision.py
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
terraform/environments/dev/: main.tf  terraform.tfvars  variables.tf  versions.tf
terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  variables.tf
terraform/modules/ecr/: main.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/github_oidc/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_provision.py
